<resources>
    <string name="app_name">Whatsapp</string>


    <string name="welcome_text">Welcome to Ping Mickey!</string>

    <string name="have_account">Already Have An Account</string>

    <string name="need_account">Need a New Account?</string>

    <string name="create_act">Create a New Account</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="logout">Logout</string>

    <string name="settings">Settings</string>

    <string name="change_pic">Change Picture</string>

    <string name="change_status">Change Status</string>
    <string name="login">Login</string>

    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
</resources>