<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="155dp"
        app:srcCompat="@drawable/chat_icon"
        app:layout_constraintTop_toTopOf="parent"
     android:contentDescription="@null"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="239dp"
        android:layout_height="63dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:text="@string/welcome_text"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="259dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:text="@string/have_account"
        android:textColor="@color/grey_100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/createActButton"
        android:layout_width="258dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:textColor="@color/grey_100"
        android:text="@string/need_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>