<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="203dp"
        android:background="@color/colorAccent"
        app:cardCornerRadius="13dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/loginEmailE"
                android:background="@drawable/selector_bg_edit_2"
                android:hint="@string/enter_email"
                android:textSize="14sp"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:paddingBottom="2dp"
                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                android:layout_width="match_parent"
                android:textColor="#f0f7f4"
                android:layout_height="wrap_content"
                android:autofillHints="null" />

            <EditText
                android:id="@+id/loginPasswordEt"
                android:layout_marginTop="15dp"
                android:background="@drawable/selector_bg_edit_2"
                android:hint="@string/enter_password"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColor="#f0f7f4"
                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="null" />


            <Button
                android:id="@+id/loginButtonId"
                android:background="@drawable/bt_shape"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:textColor="#d3d3d3"
                android:text="@string/login"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                tools:targetApi="lollipop" />



        </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>